--- a/CSS/Lobby.css
+++ b/CSS/Lobby.css
@@ -12,6 +12,14 @@ body {
       color:black;
       
   }
+
+  .button {
+    background-color:white;
+    color:black;
+    padding:0.25em;
+    border:gray;
+  }
+
   .header {
     background-color: darkblue;
     font-size:xx-large;
@@ -24,6 +32,13 @@ body {
       justify-content: center;
       align-items: center;
       
+  }
+
+  .lobbytable{
+    display:flex;
+    flex-direction:row;
+    justify-content:center;
+    align-items: center;
   }
   
 
