--- a/docs/CSS/index.css
+++ b/docs/CSS/index.css
@@ -14,6 +14,10 @@ body {
   margin:0em;
 }
 
+.ControllerImg {
+  height: 30em;
+}
+
 #homebutton {
     background-color: var(--SilverLakeBlue);
     text-decoration: none;
@@ -26,7 +30,7 @@ body {
 }
 
 .links {
-    height:1000px;
+    height: 500px;
     display:flex;
     flex-direction:column;
     justify-content: center;
